# tinyobj

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  errors.py  interpreter.py  lexer.py  parser.py  pyproject.toml
docs/: conf.py  index.rst  library.rst  requirements.txt  syntax.rst
docs/source/: conf.py  tutorial.rst
samples/: names.tobj
tobj/: __init__.py  errors.py  interpreter.py  lexer.py  main.py  parser.py
