[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tobj"
version = "0.2.0"
description = "A cool, tiny, minimal data format"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Razka Rizaldi", email = "razka.rizaldis@gmail.com" },
    { name = "tyydev1", email = "torchist@proton.me" },
]
keywords = ["library", "language", "data", "format", "programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["tinycolors>=0.6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://github.com/tyydev1/tinyobj"
Repository = "https://github.com/tyydev1/tinyobj"
Issues = "https://github.com/tyydev1/tinyobj/issues"

[tool.setuptools]
packages = ["tobj"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
